[project]
name = "gengojohhohshoritokron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "levenshtein>=0.27.1",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
